welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:25: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	faireV()
              ^MethodsPicture:29: error: not found: value c
faireV(c:Color)
       ^